authentication activated