@@ -1,5 +1,8 @@
 package com.gogo.base.dto;
 
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -7,7 +10,11 @@ import org.springframework.security.core.userdetails.UserDetails;
 import java.util.Collection;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+@Setter
+@Getter
+@NoArgsConstructor
 public class MyUserDetails implements UserDetails {
     private UUID id;
 
@@ -21,12 +28,14 @@ public class MyUserDetails implements UserDetails {
         this.id = id;
         this.username = username;
         this.password = password;
-        this.authorities = roles.stream().map(role -> new SimpleGrantedAuthority(role.toString())).toList();
+        this.authorities = roles.stream()
+                                .map(SimpleGrantedAuthority::new)
+                                .collect(Collectors.toList());
     }
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return null;
+        return authorities;
     }
 
     @Override
